fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body,
 html {
   font-family: 'Roboto';
-  font-weight: 100 !important;
+  font-weight: 100;
   padding: 0;
   margin: 0;
 }
@@ -26,6 +26,7 @@ a:hover {
 input {
   background: none;
   border: none;
+  font-weight: 50;
   border-bottom: 1px solid #fff;
   color: #fff !important;
 }
@@ -310,7 +311,7 @@ form input {
   border-bottom: 1px solid #fff;
   color: #fff !important;
   font-size: 20px;
-  margin-top: 40px;
+  margin-top: -60px !important;
 }
 .modal-input {
     width: 400px;
@@ -618,6 +619,13 @@ input:focus {
   -moz-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
+}
+
+.demo {
+color: white !important;
+position: absolute;
+right: 20px;
+bottom: 20px;
 }
 /*
 @media (max-width: 1900px) { 
